force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/CallerDDD__c.field-meta.xml
<CustomField>
    <fullName>CallerDDD__c</fullName>
    <description>DDD chamador do telefone de origem na URA.</description>
    <label>DDD Chamador</label>
    <length>5</length>
    <type>Text</type>
</CustomField>