force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/CallerPhone__c.field-meta.xml
<CustomField>
    <fullName>CallerPhone__c</fullName>
    <description>Telefone chamador registrado na URA.</description>
    <label>Telefone Chamador</label>
    <type>Phone</type>
</CustomField>