force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>Usado para armazenar o CallId do WDE</description>
    <label>Id Externo</label>
    <length>33</length>
    <type>Text</type>
</CustomField>