force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/IdentifierNumber__c.field-meta.xml
<CustomField>
    <fullName>IdentifierNumber__c</fullName>
    <description>Usado para armazenar o produto escolhido no WDE</description>
    <label>Instancia/Detalhe</label>
    <length>80</length>
    <type>Text</type>
</CustomField>