force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/InteractionNumber__c.field-meta.xml
<CustomField>
    <fullName>InteractionNumber__c</fullName>
    <label>Protocolo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>