force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/NumberOfOffers__c.field-meta.xml
<CustomField>
    <fullName>NumberOfOffers__c</fullName>
    <label>Número de Ofertas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>