force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/NumerodaInteracao__c.field-meta.xml
<CustomField>
    <fullName>NumerodaInteracao__c</fullName>
    <displayFormat>P{0000000}</displayFormat>
    <label>Número da Interação</label>
    <type>AutoNumber</type>
</CustomField>