force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/OriginInteractionNumber__c.field-meta.xml
<CustomField>
    <fullName>OriginInteractionNumber__c</fullName>
    <description>Jornada 119 - armazena o numero de protocolo do sistema origem quando não for salesforce</description>
    <label>Protocolo de Origem</label>
    <length>40</length>
    <type>Text</type>
</CustomField>