force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Motivo de criação do registro</description>
    <label>Motivo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>