force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/TokenFirstDateSend__c.field-meta.xml
<CustomField>
    <fullName>TokenFirstDateSend__c</fullName>
    <description>Data de envio do primeiro token no fluxo de pidTokenValidate</description>
    <label>TokenFirstDateSend</label>
    <type>DateTime</type>
</CustomField>