force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/TokenLastDateSend__c.field-meta.xml
<CustomField>
    <fullName>TokenLastDateSend__c</fullName>
    <description>Data em que o cliente validou o token no fluxo de pidTokenValidate</description>
    <label>TokenLastDateSend</label>
    <type>DateTime</type>
</CustomField>