force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/TokenSendAttempts__c.field-meta.xml
<CustomField>
    <fullName>TokenSendAttempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Número com a quantidade de envios de token no fluxo do pidTokenValidate</description>
    <label>TokenSendAttempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>