force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/TokenSendNumber__c.field-meta.xml
<CustomField>
    <fullName>TokenSendNumber__c</fullName>
    <description>Campo para gravar o número que o Token SMS foi enviado</description>
    <label>TokenSendNumber</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>