force-app/main/default/objects/vlocity_cmt__CustomerInteraction__c/fields/TokenStatus__c.field-meta.xml
<CustomField>
    <fullName>TokenStatus__c</fullName>
    <description>Status do token de PID usado no componente pidTokenValidate</description>
    <label>TokenStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando validação</fullName>
            </value>
            <value>
                <fullName>Validado</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Falha no envio</fullName>
            </value>
            <value>
                <fullName>Falha na comunicação API</fullName>
            </value>
            <value>
                <fullName>Não validado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>